--- a/PMCTool.App/Views/ActionsToMake/ElementsToVerify.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/ElementsToVerify.cshtml
@@ -137,6 +137,7 @@
 @section scripts
 {
 <script src="~/js/plugins/bootstrap-datetimepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/es.js"></script>
 
 <script src="~/js/core/analitycs/vElementsToVerify.js" asp-append-version="true"></script>
 <script type="text/javascript">
