Fix elements to verify report

--- a/PMCTool.App/Views/ActionsToMake/ElementsToVerify.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/ElementsToVerify.cshtml
@@ -23,13 +23,12 @@
         <div class="col-md-12 card">
             <div class="row">
                 <div class="col-md-10 pt-4 mb-4">
-                    <small class="font-weight-normal subtitle-detalle">Analytics</small>
                     <h4 class="media align-items-center font-weight-bold  mb-0 mt-0">
-                        <span class="txt-blue"> Actions to Make	</span>
+                        <span class="txt-blue">@Localizer["ActionsToMake"]</span>
                     </h4>
                 </div>
                 <div class="col-md-2 text-right pt-2">
-                    <a href="/Analytics/Projects" class="btn btn-sm btn-default  btn-outline"><i class="fas fa-arrow-left"></i> Back</a> <br><br>
+                    <a href="/Analytics/Projects" class="btn btn-sm btn-default  btn-outline"><i class="fas fa-arrow-left"></i>@Localizer["Back"] </a> <br><br>
                     <!-- <a type="submit" class="btn  btn-sm btn-default" onclick="window.print();">Imprimir</a> -->
                 </div>
                 <div class=" col-12 mt-4">
@@ -78,9 +77,9 @@
                                         <thead>
                                             <tr>
                                                 <th scope="col">@Localizer["Analytics2_015"]</th>
-                                                <th scope="col">@Localizer["description"]</th>
-                                                <th scope="col">@Localizer["plannedEndDate"]</th>
-                                                <th scope="col">@Localizer["status"]</th>
+                                                <th scope="col">@Localizer["Description"]</th>
+                                                <th scope="col">@Localizer["PlannedEndDate"]</th>
+                                                <th scope="col">@Localizer["Status"]</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -97,9 +96,9 @@
                                         <thead>
                                             <tr>
                                                 <th scope="col">@Localizer["Analytics2_015"]</th>
-                                                <th scope="col">@Localizer["description"]</th>
-                                                <th scope="col">@Localizer["plannedEndDate"]</th>
-                                                <th scope="col">@Localizer["status"]</th>
+                                                <th scope="col">@Localizer["Description"]</th>
+                                                <th scope="col">@Localizer["PlannedEndDate"]</th>
+                                                <th scope="col">@Localizer["Status"]</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -115,9 +114,9 @@
                                         <thead>
                                             <tr>
                                                 <th scope="col">@Localizer["Analytics2_015"]</th>
-                                                <th scope="col">@Localizer["description"]</th>
-                                                <th scope="col">@Localizer["plannedStartDate"]</th>
-                                                <th scope="col">@Localizer["status"]</th>
+                                                <th scope="col">@Localizer["Description"]</th>
+                                                <th scope="col">@Localizer["PlannedEndDate"]</th>
+                                                <th scope="col">@Localizer["Status"]</th>
                                             </tr>
                                         </thead>
                                         <tbody>
