--- a/PMCTool.App/Views/Project/ReportEvidences.cshtml
+++ b/PMCTool.App/Views/Project/ReportEvidences.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PMCTool.Models.Core.Location
 @{
-    ViewData["Title"] = "Acciones a realizar";
+    ViewData["Title"] = "Reporte Ejecutivo de Evidencias";
     Layout = "_Layout";
     var envName = Context.Request.Cookies["pmctool-name-env"];
 
@@ -94,7 +94,7 @@
         <div class="col-md-12 card">
             <div class="row">
                 <div class="col-md-12 pt-4 mb-2">
-                    <small class="font-weight-normal subtitle-detalle">Selecciona un reporte</small> 
+                    <small class="font-weight-normal subtitle-detalle">Seleccione un proyecto</small> 
                 </div>
                 <div class=" col-12 mt-0">
                     <!-- uno .-->
