--- a/PMCTool.App/Views/ActionsToMake/ElementsToVerify.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/ElementsToVerify.cshtml
@@ -34,7 +34,7 @@
                 <div class=" col-12 mt-4">
                     <!-- uno .-->
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-3" style="bottom:3px;">
                             <select name="projects" class="selectpicker sel-projects" id="selprojects" data-title="Proyectos" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
                                 @foreach (var project in ViewBag.projects)
                                 {
